--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -2,6 +2,8 @@ $white: #fff;
 $black: #393022;
 $blue-color: #9ecad8;
 $bg-color: #fff;
+$light-grey-cool: #c0d4da;
+$light-grey-warm: #dad6c0;
 $dark-grey: #414a4d;
 $darker-grey: #373d3f;
 $peach-color: rgb(238, 195, 119);
