--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -1,7 +1,7 @@
 .page-shop {
   overflow-x: hidden;
   width: 100vw;
-  padding: 0 7vw;
+  //padding: 0 7vw;
 
   header {
     display: flex;
@@ -11,12 +11,17 @@
     text-align: center;
   }
 
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
   .categories {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: calc(100vw);
     margin: 1rem 0 5rem;
-    padding: 2rem 0;
+    padding: 2rem 7vw;
 
     .categories-list {
       display: flex;
@@ -122,7 +127,7 @@
 
       .buttons {
         position: absolute;
-        top: 85%;
+        top: 95%;
         right: 1rem;
         display: none;
         flex-direction: row;
@@ -144,7 +149,25 @@
 }
 
 .slider-container {
-  margin: 15vh 0;
+  //margin: 15vh 0;
+  background-color: lighten($light-grey-warm, 13);
+  padding: 12vh 7vw 6vh;
+
+  &:nth-of-type(2) {
+    background-color: lighten($light-grey-cool, 13);
+  }
+
+  &:nth-of-type(3) {
+    background-color: lighten($light-grey-warm, 13);
+  }
+
+  &:nth-of-type(4) {
+    background-color: lighten($light-grey-cool, 13);
+  }
+
+  &:nth-of-type(5) {
+    background-color: lighten($light-grey-warm, 13);
+  }
 
   .product-slider {
     position: relative;
