update store styles - product input qty size

--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -134,7 +134,7 @@
         align-items: center;
         width: 100%;
 
-        .add-to-cart-btn {
+        .add-to-cart {
           padding: 0.5rem 1rem;
           margin-left: 1rem;
 
