--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -14,6 +14,8 @@ $radius-sm: 5px;
 $btn-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
 $product-shadow: 0px 6px 48px rgba(0, 0, 0, 0.032);
 
+$lg-screen: 1025px;
+$sm-screen: 961px;
 $tablet: 768px;
 $mobile: 425px;
 
