--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -37,7 +37,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 30%;
+    width: 30vw;
 
     li {
       list-style: none;
