update right arrow position rule so that it's more responsive to screen size

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -239,7 +239,7 @@ Link {
   left: 0rem;
 }
 .slider-container .arrow.arrow-right {
-  left: calc(100vw - 13rem);
+  left: calc(100vw - 21vw);
 }
 .slider-container .arrow:hover {
   cursor: pointer;
