--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -83,6 +83,7 @@ body {
   width: fit-content;
   background-color: $peach-color;
   color: #fff;
+  border: none;
   border-radius: $radius-sm;
   padding: 0.5rem 1rem;
   margin: 0.75rem 0;
